--- a/about.html
+++ b/about.html
@@ -276,11 +276,11 @@
             <div class="col-md-4">
                 <h4  style="  color: #fbaf32;  text-align: center;" >Quick Links</h4>
                 <ul style="list-style-type: none; text-align: center;">
-                    <li><a href="#" style="color: white;">Home</a></li>
-                    <li><a href="#menu" style="color: white;">Menu</a></li>
-                    <li><a href="#about" style="color: white;">About Us</a></li>
-                    <li><a href="#contact" style="color: white;">Contact</a></li>
-                    <li><a href="#reservation" style="color: white;">Reservation</a></li>
+                    <li><a href="index.html" style="color: white;">Home</a></li>
+                    <li><a href="menu.html" style="color: white;">Menu</a></li>
+                    <li><a href="about.html" style="color: white;">About Us</a></li>
+                    <li><a href="contact.html" style="color: white;">Contact</a></li>
+                    
                 </ul>
             </div>
 
