--- a/menu.html
+++ b/menu.html
@@ -278,7 +278,7 @@
                 <h4 style="  color: #fbaf32; text-align: center;">Contact Us</h4>
                 <p style="text-align: center;"><strong>Address:</strong> Thaddatheru junction KKS RD ,Jaffna</p>
                 <p style="text-align: center;"><strong>Phone:</strong> +94 0769988123</p>
-                <p style="text-align: center;"><strong>Email:</strong> info@webbuilder,lk</p>
+                <p style="text-align: center;"><strong>Email:</strong> info@webbuilder.lk</p>
                 <div class="footer-social" style="margin-right: 40px;font-size: 23px;text-align: center;">
                     <a href="" ><i class="fab fa-instagram"></i></a>
                     <a href=""><i class="fab fa-facebook-f"></i></a>
