--- a/menu.html
+++ b/menu.html
@@ -140,7 +140,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-5 d-none d-lg-block">
-                                    <img src="img/p26.jpg" alt="Image" style="height: 480px; width: 470px;">
+                                    <img src="img\p26.jpg" alt="Image" style="height: 480px; width: 470px;">
                                 </div>
                             </div>
                         </div>
@@ -149,7 +149,7 @@
                                 <div class="col-lg-7 col-md-12">
                                     <div class="menu-item">
                                         <div class="menu-img">
-                                            <img src="img/P27.jpg" alt="Image"  style="height:70px; width: 70px;">
+                                            <img src="img\P27.JPG" alt="Image"  style="height:70px; width: 70px;">
                                         </div>
                                         <div class="menu-text">
                                             <h3><span>Gulab Jamun</span> <strong>LKR 600</strong></h3>
@@ -160,7 +160,7 @@
                                     </div>
                                     <div class="menu-item">
                                         <div class="menu-img">
-                                            <img src="img/P28.jpg" alt="Image"  style="height:70px; width: 70px;">
+                                            <img src="img\P28.JPG" alt="Image"  style="height:70px; width: 70px;">
                                         </div>
                                         <div class="menu-text">
                                             <h3><span>Rasgulla</span> <strong>LKR 500</strong></h3>
@@ -169,7 +169,7 @@
                                     </div>
                                     <div class="menu-item">
                                         <div class="menu-img">
-                                            <img src="img/P29.jpg" alt="Image"  style="height:70px; width: 70px;">
+                                            <img src="img\P29.JPG" alt="Image"  style="height:70px; width: 70px;">
                                         </div>
                                         <div class="menu-text">
                                             <h3><span>Jalebi</span> <strong>LKR 300</strong></h3>
@@ -178,7 +178,7 @@
                                     </div>
                                     <div class="menu-item">
                                         <div class="menu-img">
-                                            <img src="img/P30.jpg" alt="Image"  style="height:70px; width: 70px;">
+                                            <img src="img\P31.JPG" alt="Image"  style="height:70px; width: 70px;">
                                         </div>
                                         <div class="menu-text">
                                             <h3><span>Kulfi</span> <strong>LKR 500</strong></h3>
@@ -187,7 +187,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-5 d-none d-lg-block">
-                                    <img src="img/P31.jpg" alt="Image" style="display: 400PX;">
+                                    <img src="img\P31.JPG" alt="Image" style="display: 400PX;">
                                 </div>
                             </div>
                         </div>
@@ -196,7 +196,7 @@
                                 <div class="col-lg-7 col-md-12">
                                     <div class="menu-item">
                                         <div class="menu-img">
-                                            <img src="img/P33.jpg" alt="Image" style="height:70px; width: 70px;">
+                                            <img src="img\P33.JPG" alt="Image" style="height:70px; width: 70px;">
                                         </div>
                                         <div class="menu-text">
                                             <h3><span>Lassi</span> <strong>LKR 600</strong></h3>
@@ -205,7 +205,7 @@
                                     </div>
                                     <div class="menu-item">
                                         <div class="menu-img">
-                                            <img src="img/P34.jpg" alt="Image" style="height:70px; width: 70px;">
+                                            <img src="img\P34.JPG" alt="Image" style="height:70px; width: 70px;">
                                         </div>
                                         <div class="menu-text">
                                             <h3><span>Masala Chai</span> <strong>LKR 500</strong></h3>
@@ -214,7 +214,7 @@
                                     </div>
                                     <div class="menu-item">
                                         <div class="menu-img">
-                                            <img src="img/P35.jpg" alt="Image" style="height:70px; width: 70px;">
+                                            <img src="img\P35.JPG" alt="Image" style="height:70px; width: 70px;">
                                         </div>
                                         <div class="menu-text">
                                             <h3><span>Badam Milk</span> <strong>LKR 500</strong></h3>
@@ -223,7 +223,7 @@
                                     </div>
                                     <div class="menu-item">
                                         <div class="menu-img">
-                                            <img src="img/P36.jpg" alt="Image" style="height:70px; width: 70px;">
+                                            <img src="img\P36.JPG" alt="Image" style="height:70px; width: 70px;">
                                         </div>
                                         <div class="menu-text">
                                             <h3><span>Falooda</span> <strong>LKR 800</strong></h3>
@@ -232,7 +232,7 @@
                                     </div>
                                     <div class="menu-item">
                                         <div class="menu-img">
-                                            <img src="img/P37.jpg" alt="Image" style="height:70px; width: 70px;">
+                                            <img src="img\P37.JPG" alt="Image" style="height:70px; width: 70px;">
                                         </div>
                                         <div class="menu-text">
                                             <h3><span>Mojito</span> <strong>LKR 850</strong></h3>
@@ -241,7 +241,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-5 d-none d-lg-block">
-                                    <img src="img/P32.jpg" alt="Image" style="height: 480PX;">
+                                    <img src="img\P32.JPG" alt="Image" style="height: 480PX;">
                                 </div>
                             </div>
                         </div>
