--- a/index.html
+++ b/index.html
@@ -352,14 +352,14 @@
         <div class="row">
             <!-- About Us -->
             <div class="col-md-4">
-                <h4 style="  color: #fbaf32; text-align: center;">About Us</h4>
-                <p style="text-align: center;">At Crave Culture, we serve the finest meals, crafted with the freshest ingredients, in a welcoming atmosphere. Come for the food, stay for the experience.</p>
+                <h4 style="  color: #fbaf32; text-align: left;">About Us</h4>
+                <p style="text-align: left; ">At Crave Culture, we serve the finest meals, crafted with the freshest ingredients, in a welcoming atmosphere. Come for the food, stay for the experience.</p>
             </div>
 
             <!-- Quick Links -->
             <div class="col-md-4">
-                <h4  style="  color: #fbaf32;  text-align: center;" >Quick Links</h4>
-                <ul style="list-style-type: none; text-align: center;">
+                <h4  style="  color: #fbaf32;  text-align: left; " >Quick Links</h4>
+                <ul style="list-style-type: none; text-align: left;margin-left: -35px;">
                    <li><a href="index.html" style="color: white;">Home</a></li>
                     <li><a href="menu.html" style="color: white;">Menu</a></li>
                     <li><a href="about.html" style="color: white;">About Us</a></li>
@@ -369,11 +369,11 @@
 
             <!-- Contact Info -->
             <div class="col-md-4">
-                <h4 style="  color: #fbaf32; text-align: center;">Contact Us</h4>
-                <p style="text-align: center;"><strong>Address:</strong> Thaddatheru junction KKS RD ,Jaffna</p>
-                <p style="text-align: center;"><strong>Phone:</strong> +94 0769988123</p>
-                <p style="text-align: center;"><strong>Email:</strong> info@webbuilder.lk</p>
-                <div class="footer-social" style="margin-right: 40px;font-size: 23px;text-align: center;">
+                <h4 style="  color: #fbaf32; text-align: left;">Contact Us</h4>
+                <p style="text-align: left;"><strong>Address:</strong> Thaddatheru junction KKS RD ,Jaffna</p>
+                <p style="text-align: left;"><strong>Phone:</strong> +94 0769988123</p>
+                <p style="text-align: left;"><strong>Email:</strong> info@webbuilder.lk</p>
+                <div class="footer-social" style="margin-right: 40px;font-size: 23px;text-align: left;">
                     <a href="" ><i class="fab fa-instagram"></i></a>
                     <a href=""><i class="fab fa-facebook-f"></i></a>
                     <a href=""><i class="fab fa-whatsapp"></i></a>
